--- a/index.html
+++ b/index.html
@@ -214,10 +214,14 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Data Structure and Algorithms by Zero to Mastery
+                    </li>
+                    <!-- <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                         1
                         <sup>st</sup>
                         Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                    </li>
+                    </li> -->
                     
                 </ul>
             </div>
