--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Clubs & Awards</a></li>
             </ul>
         </div>
     </nav>
@@ -77,20 +77,66 @@
         <h2 class="mb-5">Projects</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-                <h3 class="mb-0">Auction back-end</h3>
-                <div class="subheading mb-3">BYE18 Solutions</div>
-                <p>Worked on building robust platform using React, AWS, dynamoDb to deliver software solution for
-                    their Waterless Car washing products and Services.</p>
+                <a href="https://github.com/Aditya9111/Auction-Backend-AWS"><h3 class="mb-0">Auction back-end</h3></a>
+                <div class="subheading mb-3">JavaScript</div>
+                <p>Using React, AWS, dynamoDb to develop a auction website.</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">March 2019 - May 2020</span></div>
+            <!-- <div class="flex-shrink-0"><span class="text-primary">March 2019 - May 2020</span></div> -->
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-                <h3 class="mb-0">Junior Web Developer</h3>
-                <div class="subheading mb-3">Webie</div>
-                <p>Worked on their ecommerce platform .</p>
+               <a href="https://github.com/Aditya9111/Number-Guessing-Game-React-Native"> <h3 class="mb-0">Number Guessing Game</h3></a>
+                <div class="subheading mb-3">React Native</div>
+                <p>App ask you a number and then guess it .</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+        </div>
+
+         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a href="https://github.com/Aditya9111/Meal-App-React-Native"> <h3 class="mb-0">Meal App</h3></a>
+                <div class="subheading mb-3">React Native</div>
+                <p>Meal App takes list of meal and display them into separate category.You can use filters to choose meals of your choice.</p>
+            </div>
+        </div>
+
+         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a href="https://github.com/Aditya9111/Track-App"> <h3 class="mb-0">Track App</h3></a>
+                <div class="subheading mb-3">React Native , MongoDb , Axios </div>
+                <p>In this app you can store the path of your run.</p>
+            </div>
+        </div>
+
+         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a href="https://github.com/Aditya9111/Track-App"> <h3 class="mb-0">Blog App</h3></a>
+                <div class="subheading mb-3">React Native  </div>
+                <p>Blog app made using React Native.</p>
+            </div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a href="https://github.com/Aditya9111/DSC-Website-New"> <h3 class="mb-0">DSC Website</h3></a>
+                <div class="subheading mb-3">Flask   </div>
+                <p>Maintaining DSC website , implemented blogging feature on the website.</p>
+            </div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a href="https://github.com/Aditya9111/React-Ecommerce-App"> <h3 class="mb-0">Ecommerce App</h3></a>
+                <div class="subheading mb-3">React  </div>
+                <p>Ecommerce app made with react,redux , firebase as backend.</p>
+            </div>
+        </div>
+
+ <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a href="https://bye18-3za3trw3n-bye18apps.vercel.app"> <h3 class="mb-0">Bye18 Website</h3></a>
+                <div class="subheading mb-3">React with TailWind </div>
+                <p>A waterless Car washing company app platform.</p>
+            </div>
         </div>
 
     </div>
@@ -111,14 +157,14 @@
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">March 2019 - May 2020</span></div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Junior Web Developer</h3>
                         <div class="subheading mb-3">Webie</div>
                         <p>Worked on their ecommerce platform .</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                </div>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2020 - October 2020</span></div>
+                </div> -->
                
             </div>
         </section>
@@ -202,11 +248,35 @@
         <!-- Awards-->
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
+                <h2 class="mb-5">Clubs and Extracurricular</h2>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        NSS Member (2020 - Present)
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        DSC Core Member (2021 - Present)
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Internet Society Member (2020 - Present)
+                    </li>
+                    <!-- <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        1
+                        <sup>st</sup>
+                        Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                    </li> -->
+                    
+                </ul>
+            </div>
+            <div class="resume-section-content">
                 <h2 class="mb-5">Awards & Certifications</h2>
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        React Certified Developer
+                        React Certified Developer 
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
