--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-               <a href="https://github.com/Aditya9111/DSC-Website-New"> <h3 class="mb-0">DSC Website</h3></a>
+               <a href="https://ritdsc.herokuapp.com/"> <h3 class="mb-0">DSC Website</h3></a>
                 <div class="subheading mb-3">Flask   </div>
                 <p>Maintaining DSC website , implemented blogging feature on the website.</p>
             </div>
