--- a/index.html
+++ b/index.html
@@ -133,9 +133,17 @@
 
  <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-               <a href="https://bye18-3za3trw3n-bye18apps.vercel.app"> <h3 class="mb-0">Bye18 Website</h3></a>
+               <a href="https://bye18-cmmxxw7gg-bye18apps.vercel.app/"> <h3 class="mb-0">Bye18 Website</h3></a>
                 <div class="subheading mb-3">React with TailWind </div>
                 <p>A waterless Car washing company app platform.</p>
+            </div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a href="https://github.com/Aditya9111/Monsters-React"> <h3 class="mb-0">Bye18 Website</h3></a>
+                <div class="subheading mb-3">React  </div>
+                <p>A simple React app where data is displayed by querying Api.</p>
             </div>
         </div>
 
