--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-               <a href="https://github.com/Aditya9111/Monsters-React"> <h3 class="mb-0">Bye18 Website</h3></a>
+               <a href="https://github.com/Aditya9111/Monsters-React"> <h3 class="mb-0">Monster React</h3></a>
                 <div class="subheading mb-3">React  </div>
                 <p>A simple React app where data is displayed by querying Api.</p>
             </div>
