--- a/index.html
+++ b/index.html
@@ -76,6 +76,34 @@
     <div class="resume-section-content">
         <h2 class="mb-5">Projects</h2>
 
+
+         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+                <a target="_blank" href="https://github.com/Aditya9111/Auction-Backend-AWS"><h3 class="mb-0">Auction back-end</h3></a>
+                <div class="subheading mb-3">JavaScript</div>
+                <p>Using React, AWS (Serverless Functions - AWS lambda), SQS ,SNS , dynamoDb to develop a auction website.</p>
+            </div>
+            <!-- <div class="flex-shrink-0"><span class="text-primary">March 2019 - May 2020</span></div> -->
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a target="_blank" href="https://github.com/Aditya9111/Dashboard-Sales-Machine"> <h3 class="mb-0">Dashboard UI</h3></a>
+                <div class="subheading mb-3">React.js,SASS  </div>
+                <p>Simple Dashboard Design using React.js  </p>
+                <a target="_blank" href="https://stupefied-clarke-2c23e3.netlify.app/"> <h6 class="mb-0">Deployed Here</h6></a>
+            </div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+               <a target="_blank" href="https://github.com/Aditya9111/OpenSea-Clone"> <h3 class="mb-0">OpenSea Clone</h3></a>
+                <div class="subheading mb-3">Next Js,Tailwind CSS  </div>
+                <p>Opensea NFT collection web application clone.  </p>
+                <a target="_blank" href="https://sad-beaver-8e5867.netlify.app/"> <h6 class="mb-0">Deployed Here</h6></a>
+            </div>
+        </div>
+
          <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
                <a target="_blank" href="https://www.supedev.com/"> <h3 class="mb-0">Supedev</h3></a>
@@ -123,14 +151,7 @@
 
 
 
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-                <a target="_blank" href="https://github.com/Aditya9111/Auction-Backend-AWS"><h3 class="mb-0">Auction back-end</h3></a>
-                <div class="subheading mb-3">JavaScript</div>
-                <p>Using React, AWS (Serverless Functions - AWS lambda), SQS ,SNS , dynamoDb to develop a auction website.</p>
-            </div>
-            <!-- <div class="flex-shrink-0"><span class="text-primary">March 2019 - May 2020</span></div> -->
-        </div>
+       
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
                <a target="_blank" href="https://github.com/Aditya9111/Number-Guessing-Game-React-Native"> <h3 class="mb-0">Number Guessing Game</h3></a>
