--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
         type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -72,8 +73,16 @@
                             class="fab fa-github"></i></a>
                     <a class="social-icon" href="https://twitter.com/Adityarya351" target="_blank"><i
                             class="fab fa-twitter"></i></a>
+                    <a class="social-icon"
+                        href="https://drive.google.com/file/d/1SPFRfoKTFrMtPRIVuAAN-TTwWAB5AMPl/view?usp=sharing"
+                        target="_blank"><i class="fas fa-file-alt"></i></a>
+
                     <a class="social-icon" href="mailto:adityaarya3511@gmail.com" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
+
+
+
+
                 </div>
             </div>
         </section>
@@ -88,15 +97,18 @@
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home"
-                            type="button" role="tab" aria-controls="home" aria-selected="true">Frontend Applications</button>
+                            type="button" role="tab" aria-controls="home" aria-selected="true">Frontend
+                            Applications</button>
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
-                            type="button" role="tab" aria-controls="profile" aria-selected="false">Backend Applications</button>
+                            type="button" role="tab" aria-controls="profile" aria-selected="false">Backend
+                            Applications</button>
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages"
-                            type="button" role="tab" aria-controls="messages" aria-selected="false">Mobile Applications</button>
+                            type="button" role="tab" aria-controls="messages" aria-selected="false">Mobile
+                            Applications</button>
                     </li>
 
                 </ul>
@@ -105,7 +117,7 @@
                 <div class="tab-content">
                     <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
- <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mt-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mt-5">
                             <div class="flex-grow-1">
                                 <a target="_blank" href="https://icube-app.netlify.app/home" target="_blank">
                                     <h3 class="mb-0"> ICUBE </h3>
@@ -160,7 +172,7 @@
                             <!-- <div class="flex-shrink-0"><span class="text-primary">March 2019 - May 2020</span></div> -->
                         </div>
 
-                       
+
 
 
 
@@ -192,13 +204,13 @@
 
 
 
-<!-- Server -->
+                    <!-- Server -->
 
 
                     <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 
 
-<div class="d-flex flex-column flex-md-row justify-content-between mb-5 mt-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mt-5">
                             <div class="flex-grow-1">
                                 <a target="_blank" href="https://github.com/Aditya9111/Icube-backend" target="_blank">
                                     <h3 class="mb-0"> ICUBE </h3>
@@ -220,7 +232,7 @@
 
 
 
-<div class="d-flex flex-column flex-md-row justify-content-between mb-5 mt-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mt-5">
                             <div class="flex-grow-1">
                                 <a target="_blank" href="https://github.com/Aditya9111/Tasko-Server" target="_blank">
                                     <h3 class="mb-0"> Tasko App </h3>
@@ -242,9 +254,10 @@
 
 
 
-<div class="d-flex flex-column flex-md-row justify-content-between mb-5 mt-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5 mt-5">
                             <div class="flex-grow-1">
-                                <a target="_blank" href="https://github.com/Aditya9111/BucketList-Server" target="_blank">
+                                <a target="_blank" href="https://github.com/Aditya9111/BucketList-Server"
+                                    target="_blank">
                                     <h3 class="mb-0"> Bucket List App </h3>
                                 </a>
                                 <div class="subheading mb-3">React, Node.js, MongoDB, Express</div>
@@ -271,42 +284,53 @@
 
                     <div class="tab-pane mt-5" id="messages" role="tabpanel" aria-labelledby="messages-tab">
 
-<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-               <a target="_blank" href="https://github.com/Aditya9111/Track-App"> <h3 class="mb-0">Track App</h3></a>
-                <div class="subheading mb-3">React Native , MongoDb , Axios </div>
-                <p>In this app you can store the path of your run . It is made using React Native and MongoDb for database.</p>
-            </div>
-        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <a target="_blank" href="https://github.com/Aditya9111/Track-App">
+                                    <h3 class="mb-0">Track App</h3>
+                                </a>
+                                <div class="subheading mb-3">React Native , MongoDb , Axios </div>
+                                <p>In this app you can store the path of your run . It is made using React Native and
+                                    MongoDb for database.</p>
+                            </div>
+                        </div>
 
 
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-               <a target="_blank" href="https://github.com/Aditya9111/Number-Guessing-Game-React-Native"> <h3 class="mb-0">Number Guessing Game</h3></a>
-                <div class="subheading mb-3">React Native</div>
-                <p>App ask you a number and then guess it . Simple trial and error method.</p>
-            </div>
-        </div>
-
-
-
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-               <a target="_blank" href="https://github.com/Aditya9111/Meal-App-React-Native"> <h3 class="mb-0">Meal App</h3></a>
-                <div class="subheading mb-3">React Native</div>
-                <p>Meal App takes list of meal and display them into separate category.You can use filters to choose meals of your choice.</p>
-            </div>
-        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <a target="_blank"
+                                    href="https://github.com/Aditya9111/Number-Guessing-Game-React-Native">
+                                    <h3 class="mb-0">Number Guessing Game</h3>
+                                </a>
+                                <div class="subheading mb-3">React Native</div>
+                                <p>App ask you a number and then guess it . Simple trial and error method.</p>
+                            </div>
+                        </div>
 
 
 
-<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-               <a target="_blank" href="https://github.com/Aditya9111/Blog-App"> <h3 class="mb-0">Blog App</h3></a>
-                <div class="subheading mb-3">React Native  </div>
-                <p>Blog app made using React Native.</p>
-            </div>
-        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <a target="_blank" href="https://github.com/Aditya9111/Meal-App-React-Native">
+                                    <h3 class="mb-0">Meal App</h3>
+                                </a>
+                                <div class="subheading mb-3">React Native</div>
+                                <p>Meal App takes list of meal and display them into separate category.You can use
+                                    filters to choose meals of your choice.</p>
+                            </div>
+                        </div>
+
+
+
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <a target="_blank" href="https://github.com/Aditya9111/Blog-App">
+                                    <h3 class="mb-0">Blog App</h3>
+                                </a>
+                                <div class="subheading mb-3">React Native </div>
+                                <p>Blog app made using React Native.</p>
+                            </div>
+                        </div>
 
 
 
